--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,11 +2,14 @@
 ktor-version = "3.0.0"
 kotlin-version = "2.0.21"
 logback-version = "1.4.14"
+
 exposed-version = "0.52.0"
+postgres-version = "42.5.1"
 hikari-version = "5.0.1"
+flyway-version = "6.5.2"
 
 rbac-version = "0.2.0"
-
+csv-version = "2.1.0"
 
 dagger = "2.51"
 ksp = "2.0.21-1.0.25"
@@ -23,8 +26,9 @@ exposed-jdbc = { group = "org.jetbrains.exposed", name = "exposed-jdbc", version
 exposed-dao = { group = "org.jetbrains.exposed", name = "exposed-dao", version.ref = "exposed-version" }
 exposed-java-time = { group = "org.jetbrains.exposed", name = "exposed-java-time", version.ref = "exposed-version" }
 hikari-cp = { module = "com.zaxxer:HikariCP", version.ref = "hikari-version" }
-
-ktor-server-swagger = { module = "io.ktor:ktor-server-swagger", version.ref = "ktor-version"}
+db-postgres = { module = "org.postgresql:postgresql", version.ref = "postgres-version" }
+db-flyway = { module = 'org.flywaydb:flyway-core', version.ref = "flyway-version" }
+ktor-server-swagger = { module = "io.ktor:ktor-server-swagger", version.ref = "ktor-version" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json-jvm", version.ref = "ktor-version" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation-jvm", version.ref = "ktor-version" }
 ktor-server-status-pages = { module = "io.ktor:ktor-server-status-pages-jvm", version.ref = "ktor-version" }
@@ -36,9 +40,10 @@ ktor-server-auth-rbac = { module = "com.github.omkar-tenkale:ktor-role-based-aut
 dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
 dagger-core = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
 
+csv-reader = { module = "io.github.pelletier197:csv-core", version.ref = "csv-version" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
 ktor-server = { id = "io.ktor.plugin", version.ref = "ktor-version" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-version" }
-ksp = { id = "com.google.devtools.ksp" , version.ref = "ksp"}
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
