--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   ktor:
     build: .
     container_name: ktor
-    image: mivdev/esoft-api:2.2.6
+    image: mivdev/esoft:1.1.0
     user: root
     volumes:
       - ktor-media:/data/files
