--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,10 @@
 ktor {
+  development = true
+
   deployment {
     port = 8080
     port = ${?PORT}
+    watch = [ classes ]
   }
   application {
     modules = [com.miv.ApplicationKt.module]
